@@ -54,9 +54,17 @@ public class StressAction implements Runnable
         // creating keyspace and column families
         settings.maybeCreateKeyspaces();
 
+        if (settings.command.count == 0)
+        {
+            output.println("N=0: SCHEMA CREATED, NOTHING ELSE DONE.");
+            settings.disconnect();
+            return;
+        }
+
         output.println("Sleeping 2s...");
         Uninterruptibles.sleepUninterruptibly(2, TimeUnit.SECONDS);
 
+        // no need to do any warmup if we don't want to read/write any rows
         if (!settings.command.noWarmup)
             warmup(settings.command.getFactory(settings));
         if (settings.command.truncate == SettingsCommand.TruncateWhen.ONCE)
@@ -87,9 +95,7 @@ public class StressAction implements Runnable
     {
         PrintStream warmupOutput = new PrintStream(new OutputStream() { @Override public void write(int b) throws IOException { } } );
         // do 25% of iterations as warmup but no more than 50k (by default hotspot compiles methods after 10k invocations)
-        int iterations = (settings.command.count > 0
-                         ? Math.min(50000, (int)(settings.command.count * 0.25))
-                         : 50000) * settings.node.nodes.size();
+        int iterations = Math.min(50000, (int) (settings.command.count * 0.25)) * settings.node.nodes.size();
         int threads = 100;
 
         if (settings.rate.maxThreads > 0)
